# soft-floyd

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  alembic.ini  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Chart.tsx  ChatPanel.tsx  LapTable.tsx  Nav.tsx
frontend/src/pages/: ActivityDetail.tsx  ActivityList.tsx
src/coach/: cli.py  config.py  log.py
src/coach/agent/: coach.py  tools.py
src/coach/agent/prompts/: system.md
src/coach/classify/: bike_type.py
src/coach/ingest/: backfill.py  fit_parser.py  garmin_client.py  pipeline.py  poller.py
src/coach/metrics/: compute.py  zones.py
src/coach/rag/: chunking.py  embedder.py  retriever.py
src/coach/store/: models.py  session.py
src/coach/store/migrations/: env.py
src/coach/store/migrations/versions/: 9a7cef0bbfd8_phase1_initial_schema.py  a1b2c3d4e5f6_phase2_rag_and_coach.py
src/coach/web/: api.py  cost.py
tests/: conftest.py  make_fixtures.py  test_classifier.py  test_coach.py  test_fit_parser.py  test_metrics.py  test_retriever.py
tests/fixtures/: sample_indoor.fit  sample_mtb.fit  sample_road.fit
