[project]
name = "coach"
version = "0.1.0"
description = "Soft Floyd — Personal AI Cycling Coach"
requires-python = ">=3.12"
dependencies = [
    # Garmin
    "garth>=0.5,<1.0",
    # FIT parsing
    "fitdecode>=0.10,<1.0",
    # Scheduler
    "apscheduler>=3.10,<4.0",
    # Numerics
    "numpy>=1.26",
    "pandas>=2.0",
    # Notifications and secrets
    "pync>=2.0",
    "keyring>=24.0",
    "cryptography>=41.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "sqlite-vec>=0.1.0,<0.2.0",
    # Config and CLI
    "pydantic-settings>=2.0",
    "typer>=0.12",
    # Logging
    "structlog>=24.0",
    # Phase 2 (declared now, unused in Phase 1)
    "anthropic>=0.30",
    "openai>=1.30",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=1.8",
]

[project.scripts]
coach = "coach.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coach"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "ruff>=0.15.12",
]
